Initial commit - upload project files

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_password
+DB_PASSWORD=sarthak@123
 DB_NAME=portfolio_db
 
 # Server Configuration
