Initial commit - upload project files

--- a/server/.env
+++ b/server/.env
@@ -11,6 +11,6 @@ NODE_ENV=development
 # JWT Secret (generate a strong secret for production)
 JWT_SECRET=your_super_secret_jwt_key_here
 
-# Admin Credentials (change these in production)
-ADMIN_EMAIL=admin@portfolio.com
+# Admin Credentials (chanadmin@portfolio.comge these in production)
+ADMIN_EMAIL=
 ADMIN_PASSWORD=admin123
