--- a/server/.env
+++ b/server/.env
@@ -1,16 +1,17 @@
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=sarthak@123
 DB_NAME=portfolio_db
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
+DB_SSL=false
 
 # JWT Secret (generate a strong secret for production)
 JWT_SECRET=your_super_secret_jwt_key_here
 
-# Admin Credentials (chanadmin@portfolio.comge these in production)
-ADMIN_EMAIL=
+# Admin Credentials (change these in production)
+ADMIN_EMAIL=admin@portfolio.com
 ADMIN_PASSWORD=admin123
