--- a/server/.env
+++ b/server/.env
@@ -1,17 +1,25 @@
+# ---------------------------
 # Server Configuration
+# ---------------------------
 PORT=5000
 NODE_ENV=development
 
+# ---------------------------
 # Database Configuration
+# ---------------------------
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=sarthak@123
+DB_PASSWORD="sarthak@123"
 DB_NAME=portfolio_db
 DB_SSL=false
 
-# JWT Secret (generate a strong secret for production)
-JWT_SECRET=your_super_secret_jwt_key_here
+# ---------------------------
+# JWT Secret (used for signing tokens)
+# ---------------------------
+JWT_SECRET=devops_portfolio_secret_key_2025
 
-# Admin Credentials (change these in production)
+# ---------------------------
+# Admin Credentials (for backend login)
+# ---------------------------
 ADMIN_EMAIL=admin@portfolio.com
 ADMIN_PASSWORD=admin123
