Initial commit - upload updated project files

--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ NODE_ENV=development
 # ---------------------------
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD="sarthak@123"
+DB_PASSWORD=sarthak@123
 DB_NAME=portfolio_db
 DB_SSL=false
 
