--- a/infra/k8s/secret.yml
+++ b/infra/k8s/secret.yml
@@ -5,11 +5,11 @@ metadata:
   namespace: portfolio-devops
 type: Opaque
 data:
-  # The database user (e.g., 'root')
-  mysql-user: cm9vdAo= # Base64 encoded 'root'
+  # Base64 encoded 'root' (Clean, NO trailing newline)
+  mysql-user: cm9vdA== 
   
-  # The database password (e.g., 'password')
-  mysql-password: cGFzc3dvcmQK # Base64 encoded 'password' 
+  # Base64 encoded 'sarthak@123' 
+  mysql-password: c2FydGhha0AxMjM= 
   
-  # JWT Secret Key for the Node.js backend (Replace with your own long random key!)
-  jwt-secret: c3VwZXItc2VjcmV0LWtleS1mb3Itam90 # Base64 encoded 'super-secret-key-for-jwt'
+  # Base64 encoded 'super-secret-key-for-jwt'
+  jwt-secret: c3VwZXItc2VjcmV0LWtleS1mb3Itam90
