--- a/infra/k8s/mysql-pvc.yml
+++ b/infra/k8s/mysql-pvc.yml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: mysql-pvc-manual
   namespace: portfolio-devops
 spec:
-  # Defines how the volume can be accessed (ReadWriteOnce is standard for single-node DB)
   accessModes:
     - ReadWriteOnce 
   resources:
     requests:
-      # Request 5 Gigabytes of storage
       storage: 5Gi
