--- a/infra/k8s/secret.yml
+++ b/infra/k8s/secret.yml
@@ -5,11 +5,14 @@ metadata:
   namespace: portfolio-devops
 type: Opaque
 data:
-  # Base64 encoded 'root' (Clean, NO trailing newline)
+  # Base64 encoded 'root'
   mysql-user: cm9vdA== 
   
   # Base64 encoded 'sarthak@123' 
-  mysql-password: c2FydGhha0AxMjM= 
+  mysql-password: c2FydGhha0AxMjM=
+  
+  # Base64 encoded 'sarthak@123' (same as mysql-password for root)
+  mysql-root-password: c2FydGhha0AxMjM=
   
   # Base64 encoded 'super-secret-key-for-jwt'
-  jwt-secret: c3VwZXItc2VjcmV0LWtleS1mb3Itam90
+  jwt-secret: c3VwZXItc2VjcmV0LWtleS1mb3Itand0
